...
                    android:textColor="@color/verde_medio"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <!-- Campo numérico decimal para o orçamento -->
                <EditText
                    android:id="@+id/editOrcamento"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:digits="0123456789.,"
                    android:hint="@string/hint_orcamento"
...
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Botão que abre a lista de compras -->
            <Button
                android:id="@+id/btnComecar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/verde_botao"
                android:text="@string/botao_comecar"
                android:textColor="@color/branco"
...
