...
    <string name="aviso_preco_produto">Digite um preço maior que zero</string>
    <string name="msg_produto_cadastrado">Produto cadastrado!</string>
    <string name="msg_produto_atualizado">Produto atualizado!</string>
    <string name="msg_produto_excluido">Produto excluído!</string>
    <string name="titulo_confirmar_exclusao">Excluir produto</string>
    <string name="msg_confirmar_exclusao">Tem certeza que deseja excluir %1$s?</string>
    <string name="botao_sim">Sim</string>
    <string name="botao_nao">Não</string>

    <!-- Tela 3 - Resumo -->
    <string name="titulo_resumo">Resumo da Compra</string>
    <string name="subtitulo_resumo">Veja como ficou seu orçamento</string>
    <string name="label_orcamento_resumo">Orçamento</string>
...
